--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 backcall==0.1.0
 bleach==2.1.3
+certifi==2018.4.16
+chardet==3.0.4
 cycler==0.10.0
 decorator==4.3.0
 entrypoints==0.2.3
 html5lib==1.0.1
+idna==2.7
 ipykernel==4.8.2
 ipython==6.4.0
 ipython-genutils==0.2.0
@@ -39,9 +42,11 @@ ptyprocess==0.5.2
 Pygments==2.2.0
 pyparsing==2.2.0
 python-dateutil==2.7.3
+python-mnist==0.5
 pytz==2018.4
 PyYAML==3.12
 pyzmq==17.0.0
+requests==2.19.1
 scipy==1.1.0
 seaborn==0.8.1
 Send2Trash==1.5.0
@@ -53,5 +58,6 @@ torch==0.4.0
 torchvision==0.2.1
 tornado==5.0.2
 traitlets==4.3.2
+urllib3==1.23
 wcwidth==0.1.7
 webencodings==0.5.1
